--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"start": "node build",
+		"build:analyze": "vite build --mode analyze",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"test": "echo 'Tests coming soon' && exit 0",
+		"deploy": "npm run build && echo 'Ready for Vercel deployment'"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/postcss": "^4.1.7",
