--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"chart.js": "^4.4.9",
+		"chartjs-adapter-date-fns": "^3.0.0",
+		"date-fns": "^4.1.0",
 		"lucide-svelte": "^0.511.0"
 	}
 }
