🔧 Fix system admin 404 routing issue - Add redirect rules and routes for /system-admin → /admin, improve Live Truck Monitoring polish

--- a/vercel.json
+++ b/vercel.json
@@ -42,6 +42,16 @@
       "source": "/dashboard",
       "destination": "/",
       "permanent": false
+    },
+    {
+      "source": "/system-admin",
+      "destination": "/admin",
+      "permanent": true
+    },
+    {
+      "source": "/systemadmin",
+      "destination": "/admin",
+      "permanent": true
     }
   ],
   "env": {
